--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^3.21.2",
+    "express-session": "^1.13.0",
     "multer": "^1.1.0"
   },
   "devDependencies": {},
