--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.10",
     "multer": "^1.1.0",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
